--- a/day1/Python101.ipynb
+++ b/day1/Python101.ipynb
@@ -5434,7 +5434,9 @@
         "Note\n",
         "\n",
         "---\n",
-        "A Python dictionary can be easily loaded from a JSON file, which is a common and widely used data format for representing strucutred data. JSON, or JavaScript Object Notation, is lightweight, human-readable file that is primarily used for data exchange between a server and a web application. Due to its simplicity and easy of use, Jason is often utilized to store and transmit data in various programming languages. In Python, the json module provides functionality to parse JSON data and convert it into a Python dictionary. Below is an example of a JSON file, student.json, which contains student-related information in JSON format that can be loaded into a Python dictionary for further processing."
+        "A Python dictionary can be easily loaded from a JSON file, which is a common and widely used data format for representing strucutred data. JSON, or JavaScript Object Notation, is lightweight, human-readable file that is primarily used for data exchange between a server and a web application. Due to its simplicity and easy of use, Jason is often utilized to store and transmit data in various programming languages. In Python, the json module provides functionality to parse JSON data and convert it into a Python dictionary. Below is an example of a JSON file, student.json, which contains student-related information in JSON format that can be loaded into a Python dictionary for further processing.\n",
+        "\n",
+        "The official JSON file specification can be found in the RFC 8259 (https://datatracker.ietf.org/doc/html/rfc8259 ) This document provides the formal rules and guidelines for hoe JSON data should be structured. To access json module documentation you can follow this link: https://docs.python.org/3/library/json.html"
       ],
       "metadata": {
         "id": "FRXuwLhXuUmI"
@@ -5458,7 +5460,7 @@
         "\n",
         "{\n",
         "    \"Name\": \"Mark\",\n",
-        "    \"Age\": 21,\n",
+        "    \"Age\": 22,\n",
         "    \"Occupation\": \"Student\"\n",
         "}"
       ],
@@ -5489,23 +5491,7 @@
       "cell_type": "markdown",
       "source": [
         "3.4 Set\n",
-        "---\n",
-        "\n",
-        "A set is used to store multiple elements in a single variable.\n",
-        "It is an unordered, unchangeable, unindexed sequence. Every time\n",
-        "you access the set, the order of the elements may vary. Elements of a\n",
-        "set cannot be accessed by an index number. You cannot modify the\n",
-        "set, but you can remove or add elements. Duplicates are not allowed.\n",
-        "\n",
-        "---\n",
-        "\n",
-        "Syntax:\n",
-        "\n",
-        "        mySet = {element 1, element 2, ..., element n}\n",
-        "\n",
-        "        mySet = {element 1}\n",
-        "\n",
-        "        mySet = set()"
+        "---"
       ],
       "metadata": {
         "id": "aug2ii2_MNbv"
@@ -5514,14 +5500,76 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Set declarations\n",
-        "---\n",
-        "There are various ways to declare sets.\n",
+        "Description\n",
         "\n",
+        "---\n",
+        "A set is an unordered collection of unique elements, meaning that it cannot contain duplicate values. Unlike lists or tuples, sets do not preserve the order of elements, making them ideal candidates for membership testing and eleminating duplicates. They support the veriety of operations, such as union, intersection, and differense, allowing for efficient methematical set operations. Sets are mutable , you can add or remove elements after creation, but their elements must be immutable(e.g., numbers, strings, or tuples). Sets are commonly used when the goal is to work with distinct items and perform operations like filtering, searching, or removing duplicates from collection of data."
+      ],
+      "metadata": {
+        "id": "_uIh5zm8DHGe"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax:\n",
+        "\n",
+        "---\n",
+        "          mySet = {element 1, element 2, ..., element n}\n",
+        "\n",
+        "          mySet = {element 1}\n",
+        "\n",
+        "          mySet = set()"
+      ],
+      "metadata": {
+        "id": "HMDK8DGzDwJM"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Set declarations\n",
         "---"
       ],
       "metadata": {
         "id": "B6170h41Lfvp"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "A set can be declared in two ways, using curly braces and set() constructor. To create a set using curly braces, you simply list the elements separated by commas inside. Alternatively, if you use the set() constructor, you need to include a list or a tuple inside of the parenthesis. This specifically useful if you want to convert other data types into a set. A key characteristics of sets is that they automatically eliminate any duplicate values, so the result will always contain only unique elements. Sets do not maintain order, elements may appear in arbitrary order everytime you access that."
+      ],
+      "metadata": {
+        "id": "bBisr70DFNNy"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "        mySet = {element1, element2, ... elementn}\n",
+        "\n",
+        "        mySet = set(iterable)\n"
+      ],
+      "metadata": {
+        "id": "JWMRYK0jGSpJ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "Biw194ngGP8i"
       }
     },
     {
