--- a/day1/Python101.ipynb
+++ b/day1/Python101.ipynb
@@ -5690,13 +5690,67 @@
       "cell_type": "markdown",
       "source": [
         "Set methods\n",
-        "---\n",
-        "There are some methods that can be used on sets.\n",
-        "\n",
         "---"
       ],
       "metadata": {
         "id": "PD2eCqRbMAUj"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "Python sets offer several built-in methods that allow you to perform a variety of operations, such as adding, removing, and testing membership of elements. The add() method adds a single element to the set, while update() methods allows you to add multiple elements or elements from another iterable (like list or another set). To remove elements, you can use remove() (it will raise an error if the element is not found) or discrad(), which does not raise an error. The pop() method removes and returns an arbitrary element from the set. You can also check if a set contains an element using the in keyword. Other methods include clear(), removing all elements from the set, copy() creating a shallow copy of the set. Set operations such as union(), intersection(), and difference() allow you to perform mathematical set operations, combining sets or finding common or unique elements. These methods make sets a flexible and powerful tool for managing collections of unique items.\n",
+        "\n",
+        "The union() operation combines two sets, returning a new set with all unique elements from both. The intersection() operation returns a set containing only the elements that are common to both sets. The difference() operation gives a set of elements that are in the first set but not in the second. The symmetric difference() returns a set of elements that are in either of the sets, but not in both. These operations make sets particulary useful for tasks that involve comparing, merging, or filtering collections of unique elements."
+      ],
+      "metadata": {
+        "id": "xSw0vaqwIuN7"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Note\n",
+        "\n",
+        "---\n",
+        "Python sets are conceptually similar to mathematical sets in many ways. Just like mathematical sets, Python sets are collections of unique elements with no particular order. You can perform the same fundamental operations on Python sets as you would with mathematical sets.\n",
+        "\n",
+        "* Union\n",
+        "Mathematical: A U B\n",
+        "Python:       mySet1 | mySet2 or mySet1.union(mySet2)\n",
+        "\n",
+        "*Intersection\n",
+        "Mathematical: A\n",
+        "Python:       mySet1 & muSet2 or set1.intersection(mySet2)\n"
+      ],
+      "metadata": {
+        "id": "_Ya2CfD3MMIj"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          mySet.method()"
+      ],
+      "metadata": {
+        "id": "uNl0OlQlKlhN"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "krvTH6hiIqIj"
       }
     },
     {
