--- a/day1/Python101.ipynb
+++ b/day1/Python101.ipynb
@@ -4516,7 +4516,7 @@
       "metadata": {
         "id": "_MtYZKNPtyk0"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6084,21 +6084,22 @@
       "cell_type": "markdown",
       "source": [
         "4.1 if ... statements\n",
-        "---\n",
-        "The if statements are used to execute code based on specific conditions. They allow your program to make decisions and respond accordingly. There are three main forms of conditional statements. These structures let you execute your code if the condition is true, add an alternative block to run when condition is false, and allow to check multiple conditions in sequence, running the first one that is true.\n",
-        "\n",
-        "---\n",
-        "\n",
-        "Syntax:\n",
-        "\n",
-        "        if condition: block of code\n",
-        "\n",
-        "        if condition: block of code else: block of code\n",
-        "\n",
-        "        if condition: block of code elif condition: block of code else: block of code"
+        "---"
       ],
       "metadata": {
         "id": "Y8cow2CiOU7l"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "The if statements are used to execute code based on specific conditions. They allow your program to make decisions and respond accordingly. It is one of the most basic forms of decision-making in programming. There are three main forms of conditional statements. These structures let you execute your code if the condition is true, add an alternative block to run when condition is false, and allow to check multiple conditions in sequence, running the first one that is true."
+      ],
+      "metadata": {
+        "id": "5L0EKmC6XpdD"
       }
     },
     {
@@ -6113,14 +6114,52 @@
     {
       "cell_type": "markdown",
       "source": [
-        "if ... statement in its basic form\n",
-        "---\n",
-        "Here are a few examples of the if ... statements.\n",
+        "Syntax\n",
         "\n",
+        "---\n",
+        "\n",
+        "        if condition: block of code\n",
+        "\n",
+        "        if condition: block of code else: block of code\n",
+        "\n",
+        "        if condition: block of code elif condition: block of code else: block of code"
+      ],
+      "metadata": {
+        "id": "tZWtm4oMXxpq"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "if ... statement\n",
         "---"
       ],
       "metadata": {
         "id": "zV7v4OJNuuBD"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "\n",
+        "The syntax starts with *if* keyword, followed by a condition, and ends ith a colon. The indented code beneath it runs only if the condition evaluates to True. A simple *if* statement can be written in one line. The one line statemnent works the same as the multi-line version but is best used for short, simple action."
+      ],
+      "metadata": {
+        "id": "OemHvV2bYZz_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "R0tcS2isZIfl"
       }
     },
     {
@@ -6193,13 +6232,45 @@
       "cell_type": "markdown",
       "source": [
         "if ... statement with comparison operators\n",
-        "---\n",
-        "The if statements are used to check against some conditions along the code. Here a few examples of the if ... statement with comparison operators. Python provides several comparison operators that can be used with if statements as we discussed in Section 2.\n",
-        "\n",
         "---"
       ],
       "metadata": {
         "id": "tZMT8pL834Mg"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "The if statements are used to check against some conditions along the code. The basic form of an *if* statement allows a program to make decisions based on conditions using comparison operators. These operators include equal to (==), not equal to (!=), greater than (>), less than (<), greater than or equal to (>=), and less than or equal to (<=). The if statement evaluates the condition, and if it is true, it executes the indented block of code beneath it. For more information check the Section 2."
+      ],
+      "metadata": {
+        "id": "_YxscTcmZatG"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          if (comparison statement): block of code"
+      ],
+      "metadata": {
+        "id": "uBFUQQCEaYp3"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "UjTAayYuakA-"
       }
     },
     {
@@ -6235,29 +6306,32 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "Note"
-      ],
-      "metadata": {
-        "id": "cZgYJEDjPWdX"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "# A simple example of an if statement with a comparison operator\n",
         "# Comparison operators: ==, !=, >, <, >=, <=\n",
         "\n",
-        "myFirstVariable = 10\n",
+        "myFirstVariable = 10.0\n",
         "\n",
-        "if (myFirstVariable > 9.9): print(\"True\")"
+        "if (myFirstVariable > 9.99): print(\"True\")"
       ],
       "metadata": {
         "id": "oRWucK3we3g6"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Note\n",
+        "\n",
+        "---\n",
+        "You can compare integers with floats directly since both types are considered numeric types and can be evaluated using comarison operators. For example, if 10==10.0: will evaluate to True value. If you compare 10.0 and 9.99999 in if statement, Python uses standard floating-point comparison. The 10.0 is indeed greater than 9.99999, however, it is important to be catious due to possible rounding errors. For every close values, direct comparison might not behave as expected. To safely check if two floats are approximitely equal, it is better to use a small tolerance: if abs(10.0-9.99999) < 1E-5: print('Almost equal')"
+      ],
+      "metadata": {
+        "id": "zpMXmm3LarZL"
+      }
     },
     {
       "cell_type": "markdown",
