--- a/day1/Python101.ipynb
+++ b/day1/Python101.ipynb
@@ -6337,13 +6337,47 @@
       "cell_type": "markdown",
       "source": [
         "if ... statement with arithmetic, comparison, and assignment operators\n",
-        "---\n",
-        "You can use arithmetic, comparison, and assignment operators within if ... statements to create conditional logic. Here are examples of if ... statements with arithmetic, comparison, and assignment operators.\n",
-        "\n",
-        "---\n"
+        "---"
       ],
       "metadata": {
         "id": "HfP7hrlLFgz7"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "*if* statements can include expressions that combine arithmetic, comparison, and assignment operators to form condition-makin. Arithmetic operators, see Section 2, can be used to perform calculations within the condition. Comparison operators are used to evaluate the results of those calculations. Finally, the assignemnt operators are not allowed directly within the condition itself. The assignemnt must be done beforehand.\n",
+        "\n",
+        "The wolrus operator (:=) is a special assignment expression that allows you to assign a value to a variable as a part of an expression, within an *if* statement. This operator combines assignment and evaluation in a single step. It is useful when you want to both use and test the result of an expression in the same line."
+      ],
+      "metadata": {
+        "id": "VbokiUzmd39U"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          if ( arithmetic comparison): block of code"
+      ],
+      "metadata": {
+        "id": "t4QrWYskEeRY"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "-nt5iiHHfsZc"
       }
     },
     {
@@ -6379,6 +6413,19 @@
     {
       "cell_type": "code",
       "source": [
+        "# if x = 5: print('x is 5') Illegal statement since assignment operator (=) is used\n",
+        "\n",
+        "if (x:=5) > 4: print(f\"x is {x} and greater than 4\")"
+      ],
+      "metadata": {
+        "id": "hKqbVehPgYi4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# if ... statements with arithmetic ( ** ), comparison ( >= ), and walrus ( := ) operators\n",
         "\n",
         "mySecondVariable = 2\n",
@@ -6386,34 +6433,54 @@
         "if ((myTest := mySecondVariable ** 8) >= 256): print (\"Exponentiation test :\", myTest)"
       ],
       "metadata": {
-        "id": "uPb_fhTZNnDF",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "13e29a68-1556-4ac9-eae5-25ce5a853336"
+        "id": "uPb_fhTZNnDF"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Exponentiation test : 256\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
         "if ... statement with arithmetic, comparison, and logical operators\n",
-        "---\n",
-        " You can use arithmetic, comparison, and logical operators within if ... statements to create conditional logic, based on mathematical operators. Here are examples of if ... statements with arithmetic, comparison, and logical operators.\n",
-        "\n",
         "---"
       ],
       "metadata": {
         "id": "id_EExL739c4"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "*if* statements can combine arithmetic, comparison, and logical operators to create more complex conditions. Arithmetic operators perform calculations within the condition, comparison operators are used to evaluate relationships between values, logical operators allow you to combine multiple conditions. This combination gives you powerful control over program flow, enabling decisions based on multiple factors in a single *if* statement."
+      ],
+      "metadata": {
+        "id": "q2RcB8IHBS59"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          if (arithmetic comparison logical ...): block of code"
+      ],
+      "metadata": {
+        "id": "uOdLMIIwEzDk"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "bpCQ_wd0CBfM"
       }
     },
     {
@@ -6467,14 +6534,67 @@
       "cell_type": "markdown",
       "source": [
         "Nested if ... statement\n",
-        "---\n",
-        "The nested if statement allows you to check multiple conditions within one condition. Here's an example of a nested if ... statement.\n",
-        "\n",
         "---"
       ],
       "metadata": {
         "id": "5AontZ7IiJgG"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "Nested *if* statements allow for checking multiple conditions in a hierarchical manner, where the inner condition is only evaluated if the outer condition is true. Nested *if* statements are useful when decisions depend on previous conditions, helping to create clear and structured logic. However, they should be used with care to avoid overly deep nesting, which can make code harder to read and maintain."
+      ],
+      "metadata": {
+        "id": "eGKVl6TwCQLB"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "      if (condition):\n",
+        "          if (condition):\n",
+        "              block of code"
+      ],
+      "metadata": {
+        "id": "pl-eeidRFCYG"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "troQPPgRDLFb"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Nested if statements\n",
+        "\n",
+        "myFirstVariable  = 10\n",
+        "mySecondVariable = 20\n",
+        "\n",
+        "if (myFirstVariable == 10):\n",
+        "  print(\"My first variable is :\", myFirstVariable)\n",
+        "  if (mySecondVariable == 20):\n",
+        "    print(\"My second variable is :\", mySecondVariable)"
+      ],
+      "metadata": {
+        "id": "AfZy51B5DO3x"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
