--- a/day1/Python101.ipynb
+++ b/day1/Python101.ipynb
@@ -6622,13 +6622,22 @@
       "cell_type": "markdown",
       "source": [
         "if ... else statement\n",
-        "---\n",
-        "The if ... else statements are used to check against some conditions along the code. The else statement is executed when condition in the if statement is not met.\n",
-        "\n",
         "---"
       ],
       "metadata": {
         "id": "AzboK5Nmc9lr"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "*if ...else* statement are used to execute one block of code if a condition is True and a different block of code if the condition is False. This allows a program to handle two possible outcomes. This statement is a fundamental part of decision-making in Python program."
+      ],
+      "metadata": {
+        "id": "JYBdVUyEGR0S"
       }
     },
     {
@@ -6643,14 +6652,52 @@
     {
       "cell_type": "markdown",
       "source": [
-        "if ... else statement with comparison operators\n",
-        "---\n",
-        "Here are a few examples of if ... else statements.\n",
+        "Syntax\n",
         "\n",
+        "---\n",
+        "          if (condition):\n",
+        "\n",
+        "              block of code\n",
+        "          \n",
+        "          else:\n",
+        "          \n",
+        "              block of code"
+      ],
+      "metadata": {
+        "id": "31sN9AUrG874"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "if ... else statement with comparison operators\n",
         "---"
       ],
       "metadata": {
         "id": "9c5PyrvVzq4Z"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "*if...else* statements can be combined with comparison operators to make decisions based on how values relate to each other. Depending on the results, the program executes one of two code blocks. This structure is essential for controlling program flow based on specific comparisons."
+      ],
+      "metadata": {
+        "id": "4Uyl1UwRHefJ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "___"
+      ],
+      "metadata": {
+        "id": "9K-8GDTkIEaP"
       }
     },
     {
@@ -6836,13 +6883,45 @@
       "cell_type": "markdown",
       "source": [
         "if ... else statement with arithmetic and comparison operators\n",
-        "---\n",
-        "You can use arithmetic and comparison operators within the if ... else statements to create conditional logic, based on mathematical operations and comparisons.\n",
-        "\n",
         "---"
       ],
       "metadata": {
         "id": "7iT5_NSDDttP"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "*if ...else* statements can use both arithmetic and comparison operators to make decisions based on calculated values. Arithmetic operators perform mathematical operations, while comparison operators will compare the results. You can use arithmetic and comparison operators within the if ... else statements to create conditional logic, based on mathematical operations and comparisons."
+      ],
+      "metadata": {
+        "id": "H0BEhNg9IgTM"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          See examples below."
+      ],
+      "metadata": {
+        "id": "_citTBYqJBO0"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "9xRlUcneI_LY"
       }
     },
     {
@@ -6897,13 +6976,45 @@
       "cell_type": "markdown",
       "source": [
         "if ... else statement with arithmetic, comparison, and logical operators\n",
-        "---\n",
-        "You can use arithmetic, comparison and logical operators within the if ... else statements to create conditional logic, based on mathematical operations and comparisons.\n",
-        "\n",
         "---"
       ],
       "metadata": {
         "id": "yB7XOfbOz4c7"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "*if...else* statements can combine arithmetic, comparison, and logical operators to create complex decision-making conditions. You can use arithmetic, comparison and logical operators within the if ... else statements to create conditional logic, based on mathematical operations and comparisons."
+      ],
+      "metadata": {
+        "id": "DrDfbOjuJY04"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          See examples below."
+      ],
+      "metadata": {
+        "id": "-ZbKWIhuJv0u"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "BlcLSZQVJtmS"
       }
     },
     {
@@ -6967,13 +7078,45 @@
       "cell_type": "markdown",
       "source": [
         "Nested if ... else statement\n",
-        "---\n",
-        " Nested if ... else statements allow you to create more complex conditional logic and test multiple conditions in your code. Here are two examples of nested if ... else statements.\n",
-        "\n",
         "---"
       ],
       "metadata": {
         "id": "fZdbP2Fjx6TJ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "Nested *if...else* statements allow you to place one *if ... else* block inside another, enabling the program to make more specific decisions based on multiple levels of conditions. This structure is useful when a decision depends on a previous condition being True or False. It allows you to create more complex conditional logic and test multiple conditions in your code. Here are two examples of nested if ... else statements."
+      ],
+      "metadata": {
+        "id": "yinyf47GKAgU"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "      See examples below."
+      ],
+      "metadata": {
+        "id": "GIjOxR4HKpqk"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "U727duNsKn4l"
       }
     },
     {
@@ -7030,14 +7173,22 @@
       "cell_type": "markdown",
       "source": [
         "if ... elif ... else statement\n",
-        "---\n",
-        "\n",
-        "The if ... elif ... else statement allows you to test multiple conditions and execute different code blocks based on the results of these conditions.\n",
-        "\n",
         "---"
       ],
       "metadata": {
         "id": "SSgry9qkcX0Z"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "The *if...elif...else* statement is used to handle multiple conditions in a clear and structured way. It starts with an *if* condition, followed by one or more *elif* (short for else if) conditions, and ends with optional else block. The program checks each condition in order to execute the block of code for the first condition that is True and skipping the rest. If non of the conditions are True, the else condition will run. This structure is ideal for selecting one outcome from several possibilities without writing multiple nested *if* statements."
+      ],
+      "metadata": {
+        "id": "YSXXnQKfK6KC"
       }
     },
     {
@@ -7052,14 +7203,68 @@
     {
       "cell_type": "markdown",
       "source": [
-        "if ... elif ... else statement with comparison operators\n",
-        "---\n",
-        "Here are some examples of the if ... elif ... else statements with comparison operators.\n",
+        "Syntax\n",
         "\n",
+        "---\n",
+        "          if condition1:\n",
+        "\n",
+        "              block of code\n",
+        "\n",
+        "          elif condition2:\n",
+        "\n",
+        "              block of code\n",
+        "\n",
+        "          else:\n",
+        "\n",
+        "              block of code"
+      ],
+      "metadata": {
+        "id": "87K58NutL44T"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "if ... elif ... else statement with comparison operators\n",
         "---"
       ],
       "metadata": {
         "id": "sOSYXwZHyavr"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "The *if...elif...else* statement can be combined with comparison operators to make decision based on multiple conditions. Comparison operators will be used to evaluate the relationship between values, allowing the program to execute different code blocks depending on the result. The conditions are evaluated in order and only the first true condition executes. If non of the conditions are True, the else block will be executed, providing a default action.   "
+      ],
+      "metadata": {
+        "id": "BpTfjKn0Mp_j"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          See examples below."
+      ],
+      "metadata": {
+        "id": "9F-bFbOcNgJA"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "ctsb1e0xNeK7"
       }
     },
     {
@@ -7170,13 +7375,45 @@
       "cell_type": "markdown",
       "source": [
         "if ... elif ... else statement with comparison and logical operators\n",
-        "---\n",
-        "Here's an example of the if ... elif ... else statement with comparison and logical operators.\n",
-        "\n",
         "---"
       ],
       "metadata": {
         "id": "NlnLLHa_uDds"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "The *if...elif...else* statement can be enhanced with comparison and logical operators to create more complex decision-making conditions. Comparison operators can be used to evaluate relatinships between values, while logical operators allow for combining multiple conditions. This type of structure enables the program to handle multiple criteria and execute the appropriate code block based on more refined conditions."
+      ],
+      "metadata": {
+        "id": "9vflqClYN-yd"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          See examples below."
+      ],
+      "metadata": {
+        "id": "xz6Hv7Z2Ou2T"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "iWMjfxp6Os7y"
       }
     },
     {
@@ -7209,13 +7446,45 @@
       "cell_type": "markdown",
       "source": [
         "Nested if ... elif ... else statement\n",
-        "---\n",
-        "Nested if ... elif ... else statements are used to create more complex and nested conditional logic along the code. Here's an example of a nested if ... elif ... else statement.\n",
-        "\n",
         "---"
       ],
       "metadata": {
         "id": "y3XKniIwtx_L"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "A nested *if...elif...else* statement is a control structure where an *if*, *elif*, or *else* block is placed inside another. Thsi structure allows to evaluate multiple levels of conditions. Nested *if...elif...else* statements are useful for evaluating more detailed or hierarchical conditions, but should be used carefully to avoid making a very complicated structures."
+      ],
+      "metadata": {
+        "id": "tKKfbhT0O_Q6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "      See examples below."
+      ],
+      "metadata": {
+        "id": "OnP2QN1pPy-X"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "wJge6ZdJPu8l"
       }
     },
     {
